--- a/DemystifyingShapes/DemystifyingShapes.csproj
+++ b/DemystifyingShapes/DemystifyingShapes.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Views\Car.liquid" />
+    <None Include="Views\Car.cshtml" />
   </ItemGroup>
   
 
